--- a/mainstyle.css
+++ b/mainstyle.css
@@ -6,7 +6,7 @@
      box-sizing: border-box;
      font-family: 'Poppins', sans-serif;
  }
- 
+ /*  modificari */
  :root{
      /* ===== Colors ===== */
      --primary-color: #0E4BF1;
